// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`params.translator translateToBodyParameter given x-examples should translate to body parameter with multiple examples 1`] = `
Object {
  "contents": Array [
    Object {
      "examples": Array [
        Object {
          "key": "example-1",
          "value": Object {
            "hello": "world",
          },
        },
        Object {
          "key": "example-2",
          "value": Object {
            "foo": "bar",
          },
        },
      ],
      "mediaType": "*",
      "schema": Object {
        "$schema": "http://json-schema.org/draft-07/schema#",
        "format": "e-mail",
      },
    },
  ],
  "description": "descr",
  "required": true,
}
`;

exports[`params.translator translateToBodyParameter should translate to body parameter 1`] = `
Object {
  "contents": Array [
    Object {
      "examples": Array [],
      "mediaType": "*",
      "schema": Object {
        "$schema": "http://json-schema.org/draft-07/schema#",
        "format": "e-mail",
      },
    },
  ],
  "description": "descr",
  "required": true,
}
`;

exports[`params.translator translateToHeaderParam should translate header param 1`] = `
Object {
  "deprecated": false,
  "description": "desc",
  "id": "#",
  "name": "name",
  "required": true,
  "schema": Object {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "minimum": 12,
    "type": "integer",
    "x-stoplight-id": "#",
  },
  "style": "simple",
}
`;

exports[`params.translator translateToHeaderParams should translate empty dictionary to empty array 1`] = `Array []`;

exports[`params.translator translateToHeaderParams should translate to multiple header params 1`] = `
Array [
  Object {
    "deprecated": false,
    "description": "a description",
    "name": "header-name",
    "required": false,
    "schema": Object {
      "$schema": "http://json-schema.org/draft-07/schema#",
      "type": "string",
    },
    "style": "simple",
  },
  Object {
    "deprecated": false,
    "description": "another description",
    "name": "plain-tex",
    "required": false,
    "schema": Object {
      "$schema": "http://json-schema.org/draft-07/schema#",
      "type": "string",
    },
    "style": "simple",
  },
]
`;

exports[`params.translator translateToHeaderParams should translate to simple header param 1`] = `
Array [
  Object {
    "deprecated": false,
    "description": "a description",
    "name": "header-name",
    "required": false,
    "schema": Object {
      "$schema": "http://json-schema.org/draft-07/schema#",
      "type": "string",
    },
    "style": "simple",
  },
]
`;

exports[`params.translator translateToPathParameter should translate 1`] = `
Object {
  "deprecated": false,
  "description": "descr",
  "name": "name",
  "required": true,
  "schema": Object {
    "$schema": "http://json-schema.org/draft-07/schema#",
    "type": "string",
  },
  "style": "simple",
}
`;
